ros2_ws/log/build_2024-01-22_16-16-16/bluey_tools/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/jenkin/Documents/Bluey2.0/ros2_ws/install/bluey_tools/lib/python3.10/site-packages/bluey_tools/bluey_ui_node.py", line 252
    self._up_icon = PhtoImage(file=f"{home}/up-100.png"))
                                                        ^
SyntaxError: unmatched ')'

